Added comments and regenerated swagger.js
